--- a/Dockerfile-7.3
+++ b/Dockerfile-7.3
@@ -47,7 +47,8 @@ RUN apk upgrade --update && apk add --no-cache --virtual .build-deps  \
     \
     && pecl install apcu \
     && pecl install redis \
-    && docker-php-ext-enable redis apcu \
+    && pecl install xdebug \
+    && docker-php-ext-enable redis apcu xdebug \
     \
     && apk add gnu-libiconv --update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ --allow-untrusted \
     \
@@ -71,7 +72,14 @@ RUN apk upgrade --update && apk add --no-cache --virtual .build-deps  \
         && make install \
         && cd .. \
         && rm -rf advancecomp-1.17 \
-    && apk del .build-deps
+    && apk del .build-deps \
+        && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+        && echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+        && echo "xdebug.remote_port=9001" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+        && echo "xdebug.remote_handler=dbgp" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+        && echo "xdebug.remote_connect_back=0" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+        && echo "xdebug.idekey=PHPSTORM" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+        && echo "xdebug.remote_host=host.docker.internal" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
 
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 
