Remove default xdebug configuration refactor into .ini file

--- a/Dockerfile-7.3
+++ b/Dockerfile-7.3
@@ -72,14 +72,9 @@ RUN apk upgrade --update && apk add --no-cache --virtual .build-deps  \
         && make install \
         && cd .. \
         && rm -rf advancecomp-1.17 \
-    && apk del .build-deps \
-        && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-        && echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-        && echo "xdebug.remote_port=9001" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-        && echo "xdebug.remote_handler=dbgp" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-        && echo "xdebug.remote_connect_back=0" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-        && echo "xdebug.idekey=PHPSTORM" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-        && echo "xdebug.remote_host=host.docker.internal" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && apk del .build-deps
+
+COPY .docker/app/usr/local/etc/php/conf.d/*.ini /usr/local/etc/php/conf.d/
 
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 
